--- a/Week3/1. Monday/Modaldialog.html
+++ b/Week3/1. Monday/Modaldialog.html
@@ -1,25 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
 <link rel="stylesheet" href="/index.css"/>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<!--<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">-->
 <head>
     <meta charset="UTF-8">
-    <title>Modal Dialog</title>
 </head>
+
+
 <body>
-<div class="modal-dialog">
-    <div class="modal-header">
-        <label class="modal-title">Hello</label>
-    </div>
-    <div class="modal-content">
-        <p>
-            Would you like to subscribe to our email newsletter?
-        </p>
-    </div>
-    <div class="modal-buttons">
-        <button>Ok</button>
-        <button>Cancel</button>
+
+<!--<div class="w3-container">-->
+    <!--<h2>Modal</h2>-->
+    <!--<button onclick="document.getElementById('id01').style.display='block'" class="w3-button w3-black">Open Modal</button>-->
+
+    <!--<div id="id01" class="w3-modal">-->
+        <!--<div class="w3-modal-content">-->
+            <!--<div class="w3-container">-->
+                <!--<div class="modal-dialog">-->
+                    <!--<div class="modal-header"> Helloooo-->
+                    <!--</div>-->
+                <!--<span onclick="document.getElementById('id01').style.display='none'" class="w3-button w3-display-topright">&times;</span>-->
+                <!--<p>Would you like to subscribe to our email newsletter?</p>-->
+            <!--</div>-->
+        <!--</div>-->
+            <!--<button class="buttons">yes</button>-->
+            <!--<button class="buttons">no</button>-->
+    <!--</div>-->
+<!--</div>-->
+
+<div id="modalWindow">
+    <div>
+        <a href="#close">Close modal</a><br>
+        <p>hello this is what is contained within the modal.</p>
     </div>
 </div>
+
+
+
+
 
 <h1>HTML Ipsum Presents</h1>
 
@@ -73,5 +92,10 @@
         height: 80px;
     }
     </code></pre>
+
+
+
+
+<script src="./admin.js"></script>
 </body>
 </html>
