--- a/Week3/1. Monday/Float/floatexercise.html
+++ b/Week3/1. Monday/Float/floatexercise.html
@@ -2,9 +2,25 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" type="text/css" href="./floatexercise.css">
     <title>Title</title>
 </head>
 <body>
+
+<div>
+<div> Title/Header</div>
+<div>
+    <div> <h1> sidebar column 1</h1>
+
+</div>
+<div><h2>content column 2</h2> </div>
+
+</div>
+
+<div> footer </div>
+</div>
+
+
 
 </body>
 </html>
