--- a/Week3/1. Monday/Float/floatexercise.html
+++ b/Week3/1. Monday/Float/floatexercise.html
@@ -8,16 +8,18 @@
 <body>
 
 <div>
-<div> Title/Header</div>
-<div>
-    <div> <h1> sidebar column 1</h1>
+
+<div class="header"> <h1>This is the header.</h1></div>
+
+<div class="box">
+    <div class="column1"> <h1> sidebar column 1</h1>
 
 </div>
-<div><h2>content column 2</h2> </div>
+<div class="column2"><h1>content column 2</h1> </div>
 
 </div>
 
-<div> footer </div>
+<div class="footer"><h1>This is the footer.</h1></div>
 </div>
 
 
