--- a/Week3/1. Monday/Float/floatexercise.html
+++ b/Week3/1. Monday/Float/floatexercise.html
@@ -12,10 +12,10 @@
 <div class="header"> <h1>This is the header.</h1></div>
 
 <div class="box">
-    <div class="column1"> <h1> sidebar column 1</h1>
+    <div class="column1"> <h1> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus magna. Cras in mi at felis aliquet congue. Ut a est eget ligula molestie gravida. Curabitur massa. Donec eleifend, libero at sagittis mollis, tellus est malesuada tellus, at luctus turpis elit sit amet quam. Vivamus pretium ornare est. </h1>
 
 </div>
-<div class="column2"><h1>content column 2</h1> </div>
+<div class="column2"><h1>Pellentesque habitant morbi tristique</strong> senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. <em>Aenean ultricies mi vitae est.</em> Mauris placerat eleifend leo. Quisque sit amet est et sapien ullamcorper pharetra. Vestibulum erat wisi, condimentum sed, <code>commodo vitae</code>, ornare sit amet, wisi. Aenean fermentum, elit eget tincidunt condimentum, eros ipsum rutrum orci, sagittis tempus lacus enim ac dui. <a href="#">Donec non enim</a> in turpis pulvinar facilisis. Ut felis.</h1> </div>
 
 </div>
 
