--- a/Week3/1. Monday/Flexbox/flexboxexercise.html
+++ b/Week3/1. Monday/Flexbox/flexboxexercise.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" type="text/css" href="./floatexercise.css">
+    <link rel="stylesheet" type="text/css" href="./flexboxexercise.css">
     <title>Title</title>
 </head>
 <body>
