--- a/Week3/2. Tuesday/admin.html
+++ b/Week3/2. Tuesday/admin.html
@@ -20,23 +20,38 @@
     <div class="collapse navbar-collapse" id="navbarText">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-                <a class="nav-link" href="#reasons">Reasons <span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="#reasons">The show <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Features</a>
+                <a class="nav-link" href="#">Rick</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Pricing</a>
+                <a class="nav-link" href="#">Morty</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Noob-Noob</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Contact</a>
             </li>
         </ul>
         <span class="navbar-text">
-      Contact us for Specials!
     </span>
     </div>
 </nav>
 
 <div id="bgpic">
     <div class="home-wrap">
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+
+
         <p> If you haven't watched Rick and Morty, a cartoon about the adventures of a mad scientist and his hapless grandson, teleport to the nearest screen and shove every episode into your eyes as soon as possible. </p>
     </div>
 </div>
@@ -45,19 +60,11 @@
 
 
 <div class ="container-fluid"> <!--Nest container-fluid for your container class. Container div should nest your entire website content less nav bar.-->
-<div class=row>
-<div class=header></div>
-</div>
+
 <div class=row id="content">
+   <div> <img class= "purposeimg col-md-8" src="mypurpose.jpg" alt="Rick Sanchez from Rick and Morty" img="center"> </img></div>
 
-<div class="subsectiontitles"> The Rick and Morty Show!</div>
-
-    <div class="subsectiontitles"> awesomeness</div>
-
-    <div class="row" id="reasons">
-
-
-
+    <br>
 
 </div>
 
@@ -66,8 +73,8 @@
 
     <div class="row" id="pictures">
 
-        <div class="col-md-4 col-sm-12 col-lg-4"> <h2>Rick Sanchez</h2>
-                <img class="imgresize" src="RickSanchez.png" alt="Rick Sanchez from Rick and Morty"> </img><br>
+        <div class="col-md-4 col-sm-12 col-lg-4">  </id><h2>Rick Sanchez</h2>
+                <img class="imgresize" src="ricks.jpg" alt="Rick Sanchez from Rick and Morty"> </img><br>
             <ul>
                 <li>He's hyper intelligent.</li>
                 <li>Insane self absorbed.</li>
@@ -77,7 +84,7 @@
         </div>
 
             <div class="col-md-4 col-sm-12 col-lg-4"> <h2>Morty</h2>
-                 <img class="imgresize" src="morty.jpg" alt="Morty from Rick and Morty"> </img><br>
+                 <img class="imgresize" src="mortykitty.jpg" alt="Morty from Rick and Morty"> </img><br>
                 <ul>
                     <li>Very sensitive and lacks confidence.</li>
                     <li>Very helpful to his grandpa.</li>
@@ -92,7 +99,19 @@
                     <li>Has never gone on a vindicator adventure.</li></ul>
         </div>
     </div>
-<div class=footer></div>
+<div class=footer>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+
+    This fan page was made by Ahmer Malik.
+</div>
 </div>
 
 <script src="./admin.js"></script>
