--- a/Week3/2. Tuesday/admin.html
+++ b/Week3/2. Tuesday/admin.html
@@ -5,9 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css"
           integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
-    <link rel="stylesheet" href="animate.min.css">
-    <title>Bootstrap Layout Exercise</title>
+    <link rel="stylesheet" href="node_modules/animate.css/animate.min.css">
     <link rel="stylesheet" type="text/css" href="./admin.css">
+    <title>Bootstrap Layout Exercise</title>
+
 
 </head>
 <body>
@@ -23,13 +24,13 @@
                 <a class="nav-link" href="#reasons">The show <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Rick</a>
+                <a class="nav-link" href="#Rick">Rick</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Morty</a>
+                <a class="nav-link" href="#Morty">Morty</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Noob-Noob</a>
+                <a class="nav-link" href="#Noob">Noob-Noob</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#">Contact</a>
@@ -64,17 +65,15 @@
 <div class=row id="content">
    <div> <img class= "purposeimg col-md-8" src="mypurpose.jpg" alt="Rick Sanchez from Rick and Morty" img="center"> </img></div>
 
-    <br>
 
 </div>
-
-<div class="subsectiontitles"> <strong> People behind the descriptions</strong> </div>
+    <br>
 
 
     <div class="row" id="pictures">
 
-        <div class="col-md-4 col-sm-12 col-lg-4">  </id><h2>Rick Sanchez</h2>
-                <img class="imgresize" src="ricks.jpg" alt="Rick Sanchez from Rick and Morty"> </img><br>
+        <div id="Rick" class="col-md-4 col-sm-12 col-lg-4" >  </id><h2>Rick Sanchez</h2>
+                <img class="animated bounce imgresize" src="ricks.jpg" alt="Rick Sanchez from Rick and Morty"> </img><br>
             <ul>
                 <li>He's hyper intelligent.</li>
                 <li>Insane self absorbed.</li>
@@ -83,7 +82,7 @@
             </ul>
         </div>
 
-            <div class="col-md-4 col-sm-12 col-lg-4"> <h2>Morty</h2>
+            <div id="Morty" class="col-md-4 col-sm-12 col-lg-4"> <h2>Morty</h2>
                  <img class="imgresize" src="mortykitty.jpg" alt="Morty from Rick and Morty"> </img><br>
                 <ul>
                     <li>Very sensitive and lacks confidence.</li>
@@ -92,7 +91,7 @@
                     <li>Loves intergalatic cable</li>
                 </ul>
         </div>
-            <div class="col-md-4 col-sm-12 col-lg-4"> <h2>Noob-noob</h2>
+            <div id="Noob" class="col-md-4 col-sm-12 col-lg-4"> <h2>Noob-noob</h2>
                 <img class="imgresize" src="noob.jpg" alt="Noob-noob from Rick and Morty"> </img><br>
                 <ul><li>Has the best "DAAAMN" replies.</li>
                     <li> Rick's favorite.</li>
@@ -110,7 +109,7 @@
     <br>
     <br>
 
-    This fan page was made by Ahmer Malik.
+   <h2 class="animated infinite bounce"> This fan page was made by Ahmer Malik (c) 2017</h2>
 </div>
 </div>
 
@@ -118,5 +117,12 @@
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
+<script>
+    $(document).ready(function(){
+       $('.img').each(function() {      // if it's and ID, do #Rick, if it's class, do .Class , if it's an element, just type the element name
+            animationHover(this, 'bounce');
+        });
+    });
+</script>
 </body>
 </html>
