--- a/Week3/2. Tuesday/admin.html
+++ b/Week3/2. Tuesday/admin.html
@@ -109,7 +109,7 @@
     <br>
     <br>
 
-   <h2 class="animated infinite bounce"> This fan page was made by Ahmer Malik (c) 2017</h2>
+   <h2 class="animated rollIn"> This fan page was made by Ahmer Malik (c) 2017</h2>
 </div>
 </div>
 
@@ -119,7 +119,7 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
 <script>
     $(document).ready(function(){
-       $('.img').each(function() {      // if it's and ID, do #Rick, if it's class, do .Class , if it's an element, just type the element name
+       $('img').each(function() {      // if it's and ID, do #Rick, if it's class, do .Class , if it's an element, just type the element name
             animationHover(this, 'bounce');
         });
     });
